Bug 302676 - Vector layers lost when exporting to *.ora.
Summary: Vector layers lost when exporting to *.ora.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 2.4
Platform: unspecified Linux
: NOR critical
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-28 05:45 UTC by Josh Bell
Modified: 2012-06-28 12:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
.kra file produced by Krita Beta on Windows. Krita 2.4 on ubuntu shows only a blank image upon opening. (491.51 KB, application/x-krita)
2012-06-28 08:16 UTC, Josh Bell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Josh Bell 2012-06-28 05:45:37 UTC
I started working on a document with the latest release of krita (the beta) on windows and had to move back to ubuntu where I use 2.4. Unfortunately, the .kra files from the beta didn't play nice with 2.4 (they showed only transparent canvases). To overcome this problem, I exported the file as a .ora file. This worked with Krita 2.4 - I continued work on the file in the .ora container. I added several vector layers (for text, shapes, etc) to the document. I was silly enough not to resave the project as a *.kra and subsequently lost all of my vector data. This is totally my fault for not reading far enough into "Open _Raster_ Archive" but a warning of some sort would’ve averted the dilemma.

Reproducible: Always

Steps to Reproduce:
1.Save a .ora file with raster content.
2.Add vector content and save.
3.Restart Krita and open the file.
4.Vector data is lost.
Comment 1 Halla Rempt 2012-06-28 07:49:05 UTC
Ai! Yes, OpenRaster doesn't support vector layers, just like it only supports rgb and grayscale images. I'll put in a warning if there are vector layers present.

The other issue you mention, where .kra files form 2.4 beta don't load worry me even more. Do you have one of those files for me so I can determine the issue and make Krita support them properly?
Comment 2 Josh Bell 2012-06-28 08:16:36 UTC
Created attachment 72190 [details]
.kra file produced by Krita Beta on Windows. Krita 2.4 on ubuntu shows only a blank image upon opening.

Sure, here's a file. I just checked it again and I'm still encountering the same issue. Do you want me to open a new ticket or is it fine as-is?
Comment 3 Halla Rempt 2012-06-28 08:18:05 UTC
no, this is fine. I'm looking at it right now. Problems with loading .kra files have the highest priority :-)
Comment 4 Halla Rempt 2012-06-28 08:19:52 UTC
Zut... Yes, I can reproduce in the 2.4 branch. It works in 2.5 and git master, fortunately. But that means that at one point a bug fix didn't get backported, and we've just released the last version of Krita 2.4 before releasing 2.5 :-(
Comment 5 Halla Rempt 2012-06-28 12:53:16 UTC
Git commit 3f7fc889140227758051d478855f0eaac3247d8b by Boudewijn Rempt.
Committed on 28/06/2012 at 14:52.
Pushed by rempt into branch 'master'.

Save incompatible layers as paint layers to openraster

And warn the user about the loss.

M  +31   -0    krita/plugins/formats/ora/ora_export.cc
M  +9    -3    krita/plugins/formats/ora/ora_save_context.cc
M  +2    -1    krita/plugins/formats/ora/ora_save_context.h
M  +1    -1    krita/ui/openrastertk/kis_open_raster_save_context.h
M  +25   -13   krita/ui/openrastertk/kis_open_raster_stack_save_visitor.cpp
M  +7    -7    krita/ui/openrastertk/kis_open_raster_stack_save_visitor.h

http://commits.kde.org/calligra/3f7fc889140227758051d478855f0eaac3247d8b