Save incompatible layers as paint layers to openraster

And warn the user about the loss.

BUG:302676